--- a/Ar8y/Ar8y/views/Post View/ContentTableViewCell.xib
+++ b/Ar8y/Ar8y/views/Post View/ContentTableViewCell.xib
@@ -10,29 +10,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="contentcell" rowHeight="149" id="KGk-i7-Jjw" customClass="ContentTableViewCell" customModule="Ar8y" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="442" height="149"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="contentcell" rowHeight="146" id="KGk-i7-Jjw" customClass="ContentTableViewCell" customModule="Ar8y" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="424" height="146"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="442" height="149"/>
+                <rect key="frame" x="0.0" y="0.0" width="424" height="146"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wQ5-uP-TTA">
-                        <rect key="frame" x="10" y="0.0" width="432" height="149"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wQ5-uP-TTA">
+                        <rect key="frame" x="10" y="0.0" width="414" height="146"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                         <color key="textColor" systemColor="labelColor"/>
-                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="14"/>
+                        <fontDescription key="fontDescription" name="AppleSymbols" family="Apple Symbols" pointSize="17"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="wQ5-uP-TTA" secondAttribute="trailing" id="540-pp-NZW"/>
+                    <constraint firstItem="wQ5-uP-TTA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="SG7-lm-PEi"/>
+                    <constraint firstAttribute="bottom" secondItem="wQ5-uP-TTA" secondAttribute="bottom" id="bgp-mx-3ls"/>
+                    <constraint firstItem="wQ5-uP-TTA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="ze2-te-btE"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="content" destination="wQ5-uP-TTA" id="Xhe-50-NTV"/>
             </connections>
-            <point key="canvasLocation" x="192.36641221374046" y="56.690140845070424"/>
+            <point key="canvasLocation" x="178.62595419847327" y="55.633802816901408"/>
         </tableViewCell>
     </objects>
     <resources>
